zeroidc/vendor/wasm-bindgen-macro/ui-tests/traits-not-implemented.stderr
error[E0277]: the trait bound `A: IntoWasmAbi` is not satisfied
 --> ui-tests/traits-not-implemented.rs:5:1
  |
5 | #[wasm_bindgen]
  | ^^^^^^^^^^^^^^^ the trait `IntoWasmAbi` is not implemented for `A`
  |
note: required by a bound in `IntoWasmAbi`
 --> $WORKSPACE/src/convert/traits.rs
  |
  | / pub trait IntoWasmAbi: WasmDescribe {
  | |     /// The wasm ABI type that this converts into when crossing the ABI
  | |     /// boundary.
  | |     type Abi: WasmAbi;
... |
  | |     fn into_abi(self) -> Self::Abi;
  | | }
  | |_^ required by this bound in `IntoWasmAbi`
  = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
